// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bubble component attribute asker bubble renders properly 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <form
        onSubmit={[Function]}
      >
        <input
          className="textbox focusme"
          name="val"
          onChange={[Function]}
          value="value"
        />
        <input
          type="submit"
          value="OK"
        />
      </form>
    </div>
  </div>
</div>
`;

exports[`Bubble component attribute menu bubble renders properly 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <div
        className="menu"
      >
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          Delete this attribute
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component captions should be correctly formatted 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <div
        className="menu"
      >
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          
          <span
            className="techno"
          >
            <span
              className="punc"
            >
              &lt;
              
            </span>
            <span
              className="elName"
            >
              element 
            </span>
            <span
              className="punc"
            >
              /
              &gt;
            </span>
          </span>
          
        </div>
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          
          <span
            className="techno"
          >
            <span
              className="atName"
            >
              key
            </span>
            <span
              className="punc equals"
            >
              =
            </span>
            <span
              className="punc"
            >
              "
            </span>
            <span
              className="atValue"
            >
              value
            </span>
            <span
              className="punc"
            >
              "
            </span>
          </span>
          
        </div>
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          
          <span
            className="techno"
          >
            <span
              className="atName"
            >
              key
            </span>
          </span>
          
        </div>
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          
          <span
            className="techno"
          >
            <span
              className="atName"
            >
              key
            </span>
            <span
              className="punc equals"
            >
              =
            </span>
            <span
              className="punc"
            >
              "
            </span>
            
            <span
              className="punc"
            >
              "
            </span>
          </span>
          
        </div>
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          
          <span
            className="techno"
          >
            <span
              className="punc"
            >
              "
            </span>
            <span
              className="atValue"
            >
              value
            </span>
            <span
              className="punc"
            >
              "
            </span>
          </span>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component element bubble renders properly 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <div
        className="menu"
      >
        <div
          className="menuItem focusme"
          onClick={[Function]}
        >
          Delete this 
          <span
            className="techno"
          >
            <span
              className="punc"
            >
              &lt;
              
            </span>
            <span
              className="elName"
            >
              element 
            </span>
            <span
              className="punc"
            >
              /
              &gt;
            </span>
          </span>
          
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Bubble component element bubble without menu renders properly 1`] = `null`;

exports[`Bubble component menu item should be hidden if hideIf() returns true 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <div
        className="menu"
      />
    </div>
  </div>
</div>
`;

exports[`Bubble component text bubble renders properly 1`] = `
<div
  className="xonomyBubble nerd"
  style={
    Object {
      "display": "block",
      "left": 0,
      "top": 0,
    }
  }
>
  <div
    className="inside"
  >
    <div
      className="xonomyBubbleContent"
    >
      <form
        onSubmit={[Function]}
      >
        <textarea
          className="textbox focusme"
          name="val"
          onChange={[Function]}
          value="value"
        />
        <div
          className="submitline"
        >
          <input
            type="submit"
            value="OK"
          />
        </div>
      </form>
    </div>
  </div>
</div>
`;
